Fix Bug in PictureInfoEditor and further changes towards deprecating the file URL way of identifying pictures